--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-web": "~0.20.0"
+    "react-native-web": "~0.20.0",
+    "expo-blur": "~14.1.5",
+    "expo-haptics": "~14.1.4",
+    "expo-image": "~2.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
