--- a/package.json
+++ b/package.json
@@ -14,9 +14,14 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@hookform/resolvers": "^5.2.1",
     "@react-navigation/native": "^7.1.6",
     "expo": "~53.0.15",
+    "expo-blur": "~14.1.5",
     "expo-font": "~13.3.2",
+    "expo-haptics": "~14.1.4",
+    "expo-image": "~2.3.2",
+    "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.6",
     "expo-router": "~5.1.2",
     "expo-splash-screen": "~0.30.9",
@@ -25,14 +30,14 @@
     "expo-web-browser": "~14.2.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-hook-form": "^7.62.0",
     "react-native": "0.79.4",
+    "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-web": "~0.20.0",
-    "expo-blur": "~14.1.5",
-    "expo-haptics": "~14.1.4",
-    "expo-image": "~2.3.2"
+    "zod": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
