feat: implement management cards UI

--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -6,9 +6,9 @@
       // "@*": [
       //   "./*"
       // ],
-      "@constants/*": ["frontend/constants/*"],
-      "@components/*": ["frontend/src/components/*"],
-      "@screens/*": ["frontend/src/screens/*"],
+      "@constants/*": ["./frontend/constants/*"],
+      "@components/*": ["./frontend/src/components/*"],
+      "@screens/*": ["./frontend/src/screens/*"],
       "@assets/*": ["./assets/*"]
     }
   },
