--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,8 @@
     "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "^5.2.1",
     "@react-navigation/native": "^7.1.6",
+    "@tanstack/react-query": "^5.87.1",
+    "axios": "^1.11.0",
     "expo": "~53.0.15",
     "expo-blur": "~14.1.5",
     "expo-font": "~13.3.2",
@@ -28,22 +30,29 @@
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.9",
     "expo-web-browser": "~14.2.0",
+    "lodash": "^4.17.21",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.62.0",
     "react-native": "0.79.4",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
     "zod": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@tanstack/eslint-plugin-query": "^5.86.0",
+    "@types/lodash": "^4.17.20",
+    "@types/phoenix": "^1.6.6",
     "@types/react": "~19.0.10",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.8",
+    "prettier": "^3.6.2",
     "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3"
   },
