feat: add authContext

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,7 +42,8 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
-    "zod": "^4.1.1"
+    "zod": "^4.1.1",
+    "expo-secure-store": "~14.2.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
