--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,17 +20,20 @@
     "axios": "^1.11.0",
     "expo": "~53.0.15",
     "expo-blur": "~14.1.5",
+    "expo-checkbox": "~4.1.4",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.2",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.6",
     "expo-router": "~5.1.2",
+    "expo-secure-store": "~14.2.4",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "expo-system-ui": "~5.0.9",
     "expo-web-browser": "~14.2.0",
     "lodash": "^4.17.21",
+    "phoenix": "^1.8.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.62.0",
@@ -42,8 +45,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
-    "zod": "^4.1.1",
-    "expo-secure-store": "~14.2.4"
+    "zod": "^4.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
