--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "expo-web-browser": "~14.2.0",
     "lodash": "^4.17.21",
     "phoenix": "^1.8.1",
+    "qs": "^6.14.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.62.0",
@@ -45,6 +46,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "~0.20.0",
+    "use-debounce": "^10.0.6",
     "zod": "^4.1.1"
   },
   "devDependencies": {
