--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/poppins": "^0.4.1",
     "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "^5.2.1",
     "@react-navigation/native": "^7.1.6",
@@ -45,6 +46,7 @@
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.20.0",
     "use-debounce": "^10.0.6",
     "zod": "^4.1.1"
