--- a/frontend/app.json
+++ b/frontend/app.json
@@ -8,6 +8,9 @@
     "scheme": "zonkedrivers",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
+    "router": {
+      "appDir": "src/app"
+    },
     "splash": {
       "image": "./assets/images/splash-icon.png",
       "resizeMode": "contain",
