--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,11 @@
   "jest": {
     "preset": "jest-expo"
   },
+  "expo": {
+    "router": {
+      "appDir": "frontend/src/app"
+    }
+  },
   "dependencies": {
     "@expo-google-fonts/poppins": "^0.4.1",
     "@expo/vector-icons": "^14.1.0",
@@ -40,6 +45,7 @@
     "react-dom": "19.0.0",
     "react-hook-form": "^7.62.0",
     "react-native": "0.79.4",
+    "react-native-dotenv": "^3.4.11",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-paper": "^5.14.5",
     "react-native-reanimated": "~3.17.4",
