--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,7 +17,7 @@
     "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "^5.2.1",
     "@react-navigation/native": "^7.1.6",
-    "@tanstack/react-query": "^5.87.1",
+    "@tanstack/react-query": "^5.90.2",
     "axios": "^1.11.0",
     "expo": "~53.0.15",
     "expo-blur": "~14.1.5",
@@ -48,6 +48,8 @@
     "react-native-svg": "15.11.2",
     "react-native-vector-icons": "^10.3.0",
     "react-native-web": "~0.20.0",
+    "rn-range-slider": "^2.2.2",
+    "simple-icons": "^15.16.1",
     "use-debounce": "^10.0.6",
     "zod": "^4.1.1"
   },
