--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,6 +65,7 @@
     "@types/lodash": "^4.17.20",
     "@types/phoenix": "^1.6.6",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.73.0",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.8",
     "prettier": "^3.6.2",
