--- a/docker/localstack/docker-compose.yml
+++ b/docker/localstack/docker-compose.yml
@@ -11,6 +11,7 @@ services:
       - SERVICES=s3
       - DEBUG=1
       - PERSISTENCE=1
+      - DATA_DIR=/var/lib/localstack
       - AWS_DEFAULT_REGION=us-east-1
     volumes:
       - "./.localstack:/var/lib/localstack"
