feat: change select platforms and licences

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,6 @@
-# Mapbox API Token
-# Get your token from: https://account.mapbox.com/access-tokens/
-MAPBOX_TOKEN=your_mapbox_token_here
+# Geoapify API Key
+# Get your key from: https://myprojects.geoapify.com/
+GEOAPIFY_API_KEY=your_geoapify_api_key_here
 
 # AWS Configuration (for production)
 # AWS_ACCESS_KEY_ID=your_aws_access_key
