--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,1 +1,2 @@
-EXPO_PUBLIC_MAPBOX_TOKEN = "secret_token_key"
+# Location autocomplete is handled by the backend via Geoapify
+# No frontend API keys needed for location services
