--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll"
   },
@@ -29,6 +29,7 @@
     "expo": "~53.0.15",
     "expo-blur": "~14.1.5",
     "expo-checkbox": "~4.1.4",
+    "expo-device": "^8.0.10",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.2",
@@ -36,6 +37,7 @@
     "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "^14.1.5",
     "expo-linking": "~7.1.6",
+    "expo-notifications": "^0.32.16",
     "expo-router": "~5.1.2",
     "expo-secure-store": "~14.2.4",
     "expo-splash-screen": "~0.30.9",
