fix: spinner loading forever and push notifications

--- a/frontend/app.json
+++ b/frontend/app.json
@@ -49,6 +49,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "aa32f563-1c35-4e50-84ca-d91d10cea6da"
+      }
     }
   }
 }
