--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,8 +28,10 @@
     "axios": "^1.11.0",
     "expo": "~53.0.15",
     "expo-blur": "~14.1.5",
+    "expo-build-properties": "^55.0.9",
     "expo-checkbox": "~4.1.4",
     "expo-device": "^8.0.10",
+    "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.2",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.3.2",
